# dutch-vocab

./: .gitignore  LICENSE  README.md  learning_log.csv  lesson_objects.py  pdf_constructor.py  pdf_generator.py  pyproject.toml  tests.py  vocab_functions.py
src/dutch-vocab-lessons/: dutch_vocab_lessons.py  figure_generator.py  lessons.py
src/dutchvocab/: __main__.py  figure_generator.py  lesson_objects.py  lessons.py  pdf_constructor.py  practice_heatmap.py  run.py  runner.py  settings.py  tests.py  vocab_functions.py
