[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dutchvocab"
version = "0.2.1"
description = "Lessons for learning Dutch vocabulary."
authors = [{name="Kathryn Kleijn"}]
license = "MIT"
readme = "README.md"

[project.scripts]
dutchlesson = "dutchvocab.run:main"
dutchsettings = "dutchvocab.settings:main"

[tool.setuptools.packages.find]
where = ["src"]
